fix: cryptocurrency methods